ACLOCAL_AMFLAGS = -I m4

proton_includedir=$(includedir)/proton/
proton_include_HEADERS=$(top_srcdir)/include/proton/*.hpp
protondetail_includedir=$(includedir)/proton/detail/
protondetail_include_HEADERS=$(top_srcdir)/include/proton/detail/*.hpp

SUBDIRS = src test
#examples
DIST_SUBDIRS = src test
