TESTS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_set eg_unordered_set eg_map eg_unordered_map wc
check_PROGRAMS = eg_func eg_vector eg_deque eg_string eg_getopt eg_tuple eg_set eg_unordered_set eg_map eg_unordered_map wc

eg_func_SOURCES = functor.cpp
eg_func_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_func_LDADD = $(top_srcdir)/src/libproton.la

eg_string_SOURCES = string.cpp
eg_string_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_string_LDADD = $(top_srcdir)/src/libproton.la

eg_vector_SOURCES = vector.cpp
eg_vector_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_vector_LDADD = $(top_srcdir)/src/libproton.la

eg_deque_SOURCES = deque.cpp
eg_deque_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_deque_LDADD = $(top_srcdir)/src/libproton.la

eg_map_SOURCES = map.cpp
eg_map_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_map_LDADD = $(top_srcdir)/src/libproton.la

eg_set_SOURCES = set.cpp
eg_set_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_set_LDADD = $(top_srcdir)/src/libproton.la

eg_unordered_set_SOURCES = unordered_set.cpp
eg_unordered_set_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_unordered_set_LDADD = $(top_srcdir)/src/libproton.la

eg_unordered_map_SOURCES = unordered_map.cpp
eg_unordered_map_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_unordered_map_LDADD = $(top_srcdir)/src/libproton.la

eg_getopt_SOURCES = getopt.cpp
eg_getopt_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_getopt_LDADD = $(top_srcdir)/src/libproton.la

eg_tuple_SOURCES = tuple.cpp
eg_tuple_CXXFLAGS = $(BOOST_CPPFLAGS)
eg_tuple_LDADD = $(top_srcdir)/src/libproton.la

wc_SOURCES = wc.cpp
wc_CXXFLAGS = $(BOOST_CPPFLAGS)
wc_LDADD = $(top_srcdir)/src/libproton.la

INCLUDES = -I$(top_srcdir)/include
